--- a/report.html
+++ b/report.html
@@ -14115,7 +14115,7 @@ Yes, this confirms the relevance of the features I am looking at - Grocery -&gt;
 <p><strong>How is the data for those features distributed? </strong><br/>
 Hint: Is the data normally distributed? Where do most of the data points lie?<br/>
 <span style='background-color: yellow'>(Correction on reviewer request)</span><br/>
-The data is not normally distributed, most of the data points are skewed to the bottom right by the outliers.<br/>
+The data is not normally distributed, most of the data points are skewed to the bottom left by the outliers.<br/>
 <br/></p>
 
 </div>
