--- a/report.html
+++ b/report.html
@@ -26790,17 +26790,36 @@ AACA2iEQAgAAAFA7BEIAAAAAaodACAAAAEDt/H8P/+NjzMxghgAAAABJRU5ErkJggg==
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
 <p><strong>What set of establishments could each of the customer segments represent?</strong><br/>
-There are two clusters (customer segments).<br/>
-<span style='background-color: yellow'>(Correction on reviewer request)</span><br/></p>
+<span style='background-color: yellow'>(Correction on reviewer request)</span><br/>
+There are two clusters (customer segments).<br/></p>
+<p>Customer segment 0 - Compare each product category spending value to the product category mean value:<br/></p>
 <p><table>
-    <tr><td>Cluster</td><td>Product Category</td><td style='border-left: black 1px solid'>Establishments</td></tr>
-    <tr><td>Segment 0</td><td>Grocery, Milk, Fresh</td><td style='border-left: black 1px solid'>retailers(supermarkets)</td></tr>
-    <tr><td>Segment 1</td><td>Fresh</td><td style='border-left: black 1px solid'>markets</td></tr>
+    <tr><td style='border-right:black 1px solid;width:200px'></td><td>Fresh</td><td>Milk</td><td>Grocery</td><td>Frozen</td><td>Detergents_Paper</td><td>Delicatessen</td></tr>
+    <tr><td style='border-right:black 1px solid'>Segment 0</td><td>6236.0</td><td>7068.0</td><td>10219.0</td><td>1316.0</td><td>3472.0</td><td>1186.0</td></tr>
+    <tr><td style='border-right:black 1px solid'>mean</td><td>12000.30</td><td>5796.27</td><td>7951.28</td><td>3071.93</td><td>2881.49</td><td>1524.87</td></tr>
+    <tr><td style='border-right:black 1px solid'>Value - Mean</td><td>-5764</td><td>1271.73</td><td>2267.72</td><td>-1755.93</td><td>590.50</td><td>-338.87</td></tr>
+    <tr><td style='border-right:black 1px solid'>Over Mean = Establishment</td><td>No</td><td style='background-color:#93FF93'>Yes</td><td style='background-color:#93FF93'>Yes</td><td>No</td><td style='background-color:#93FF93'>Yes</td><td>No</td></tr>
+</table>
+<br/></p>
+<p>Customer segment 1 - Compare each product category spending value to the product category mean value:<br/></p>
+<p><table>
+    <tr><td style='border-right:black 1px solid;width:210px'></td><td>Fresh</td><td>Milk</td><td>Grocery</td><td>Frozen</td><td>Detergents_Paper</td><td>Delicatessen</td></tr>
+    <tr><td style='border-right:black 1px solid'>Segment 1</td><td>8879.0</td><td>1919.0</td><td>2433.0</td><td>2066.0</td><td>307.0</td><td>738.0</td></tr>
+    <tr><td style='border-right:black 1px solid'>mean</td><td>12000.30</td><td>5796.27</td><td>7951.28</td><td>3071.93</td><td>2881.49</td><td>1524.87</td></tr>
+    <tr><td style='border-right:black 1px solid'>Value - Mean</td><td>-3121.29</td><td>-3877.26</td><td>-5518.27</td><td>-1005.93</td><td>-2574.49</td><td>-786.87</td></tr>
+    <tr><td style='border-right:black 1px solid'>Over Mean = Establishment</td><td>No</td><td>No</td><td>No</td><td>No</td><td>No</td><td>No</td></tr>
+</table>
+<br/></p>
+<p><table>
+    <tr><td>Cluster (Customer Segment)</td><td>Product Category</td><td style='border-left: black 1px solid'>Establishments</td></tr>
+    <tr><td>0</td><td>Milk, Grocery, Detergents_Paper</td><td style='border-left: black 1px solid; background-color:#93FF93'>retailers(supermarkets)</td></tr>
+    <tr><td>1</td><td>None</td><td style='border-left: black 1px solid'>None</td></tr>
 </table>
 <br/>
-Segment 0 customers have a lot more spending power then Segment 1<br/>
 Segment 0 - total spending value is 29497.0<br/>
 Segment 1 - total spending value is 16342.0<br/>
+Segment 0 customer segment have a lot more spending power then Segment 1, and three of their product categories spending are above mean - Milk, Grocery, Detergents_Paper. The establishment is likely to be retailer (supermarkets) where all these products available. <br/>
+Segment 1 customer segment highest value is Fresh but it is still below the mean, this is why this customer segment do not have an establishment, simply based on their spending power.
 <br/></p>
 
 </div>
